@@ -42,6 +42,8 @@ Bugs fixed:
 - 2192023 sfcb deadlocks on nsHt initialization
 - 2391132 Check for empty string in decode64
 - 2390100 mlogf called with unsafe arguments
+- 2390523 buffer overrun in cimslpSLP.c
+
 
 
 Changes in 1.3.2
